tests/samples/compile_errors/duplicate_declaration/duplicate_const.bas
Attribute VB_Name = "DuplicateConst"
Sub TestDupConst()
    Const MAX_VAL = 100
    Const MAX_VAL = 200 ' Duplicate
End Sub
